docs/v2/integrations/agentssdk.mdx
---
title: OpenAI Agents SDK
description: 'AgentOps and OpenAI Agents SDK integration for powerful multi-agent workflow monitoring.'
---

[OpenAI Agents SDK](https://github.com/openai/agentsdk_prototype) is a lightweight yet powerful framework for building multi-agent workflows. The SDK provides a comprehensive set of tools for creating, managing, and monitoring agent-based applications. AgentOps seamlessly integrates to provide observability into these workflows.

## Core Concepts

- **Agents**: LLMs configured with instructions, tools, guardrails, and handoffs
- **Handoffs**: Allow agents to transfer control to other agents for specific tasks
- **Guardrails**: Configurable safety checks for input and output validation
- **Tracing**: Built-in tracking of agent runs, allowing you to view, debug and optimize your workflows

## Installation

Install AgentOps, the OpenAI Agents SDK, and `python-dotenv` for managing API keys:
<CodeGroup>
  ```bash pip 
  pip install agentops openai-agents python-dotenv
  ```
  ```bash poetry
  poetry add agentops openai-agents python-dotenv
  ```
  ```bash uv
  uv add agentops openai-agents python-dotenv
  ```
</CodeGroup>`

## Setting Up API Keys

Before using the OpenAI Agents SDK with AgentOps, you need to set up your API keys:
- **OPENAI_API_KEY**: From the [OpenAI Platform](https://platform.openai.com/api-keys)
- **AGENTOPS_API_KEY**: From your [AgentOps Dashboard](https://app.agentops.ai/)

You can set these as environment variables or in a `.env` file.

<CodeGroup>
  ```bash Export to CLI
  export OPENAI_API_KEY="your_openai_api_key_here"
  export AGENTOPS_API_KEY="your_agentops_api_key_here"
  ```
  ```txt Set in .env file
  OPENAI_API_KEY="your_openai_api_key_here"
  AGENTOPS_API_KEY="your_agentops_api_key_here"
  ```
</CodeGroup>

Then load them in your Python code:
```python
from dotenv import load_dotenv
import os

load_dotenv()

AGENTOPS_API_KEY = os.getenv("AGENTOPS_API_KEY")
OPENAI_API_KEY = os.getenv("OPENAI_API_KEY")
```

## Usage

Initialize AgentOps at the beginning of your application. It will automatically instrument the OpenAI Agents SDK. The "Hello World Example" below demonstrates basic usage.

<CodeGroup>
```python Hello World Example
from agents import Agent, Runner
import agentops
import os # Ensure os is imported if using os.getenv

# Initialize AgentOps. 
# If AGENTOPS_API_KEY is in env, it's used. Otherwise, pass it directly.
# Example: agentops.init(os.getenv("AGENTOPS_API_KEY")) or agentops.init("<YOUR_AGENTOPS_API_KEY>")
agentops.init() # Assumes AGENTOPS_API_KEY is in environment

# OpenAI client used by Agents SDK will pick up OPENAI_API_KEY from env.

agent = Agent(name="Assistant", instructions="You are a helpful assistant")

result = Runner.run_sync(agent, "Write a haiku about recursion in programming.")
print(result.final_output)

# Expected Output:
# Code within the code,
# Functions calling themselves,
# Infinite loop's dance.
```
</CodeGroup>

## Advanced Examples

### Handoffs Example

```python
from agents import Agent, Runner
import asyncio
import agentops
import os

agentops.init() # Assumes AGENTOPS_API_KEY is in environment

spanish_agent = Agent(
    name="Spanish agent",
    instructions="You only speak Spanish.",
)

english_agent = Agent(
    name="English agent",
    instructions="You only speak English",
)

triage_agent = Agent(
    name="Triage agent",
    instructions="Handoff to the appropriate agent based on the language of the request.",
    handoffs=[spanish_agent, english_agent],
)


async def main():
    result = await Runner.run(triage_agent, input="Hola, ¿cómo estás?")
    print(result.final_output)
    # Expected Output: ¡Hola! Estoy bien, gracias por preguntar. ¿Y tú, cómo estás?


if __name__ == "__main__":
    asyncio.run(main())
```

### Functions Example

```python
import asyncio
from agents import Agent, Runner, function_tool
import agentops
import os

agentops.init() # Assumes AGENTOPS_API_KEY is in environment

@function_tool
def get_weather(city: str) -> str:
    return f"The weather in {city} is sunny."


agent = Agent(
    name="Weather Agent", 
    instructions="You are a helpful agent that can get weather information.",
    tools=[get_weather],
)


async def main():
    result = await Runner.run(agent, input="What's the weather in Tokyo?")
    print(result.final_output)
    # Expected Output: The weather in Tokyo is sunny.


if __name__ == "__main__":
    asyncio.run(main())
```

## The Agent Loop

When you call `Runner.run()`, the SDK runs a loop until it gets a final output:

1. The LLM is called using the model and settings on the agent, along with the message history.
2. The LLM returns a response, which may include tool calls.
3. If the response has a final output, the loop ends and returns it.
4. If the response has a handoff, the agent is set to the new agent and the loop continues from step 1.
5. Tool calls are processed (if any) and tool response messages are appended. Then the loop continues from step 1.

You can use the `max_turns` parameter to limit the number of loop executions.

## Final Output

Final output is the last thing the agent produces in the loop:

- If you set an `output_type` on the agent, the final output is when the LLM returns something of that type using structured outputs.
- If there's no `output_type` (i.e., plain text responses), then the first LLM response without any tool calls or handoffs is considered the final output.

## Examples
<CardGroup cols={2}>
  <Card title="Customer Service Agent" icon="notebook" href="/v2/examples/openai_agents">
    Demonstrates a customer service workflow
  </Card>
  <Card title="Agent Patterns" icon="notebook" href="https://github.com/AgentOps-AI/agentops/blob/main/examples/openai_agents/agent_patterns.ipynb" newTab={true}>
    Illustrates various agent interaction patterns.
  </Card>
  <Card title="Agents with Tools" icon="notebook" href="https://github.com/AgentOps-AI/agentops/blob/main/examples/openai_agents/agents_tools.ipynb" newTab={true}>
    Showcases agents utilizing different tools.
  </Card>
</CardGroup>

<script type="module" src="/scripts/github_stars.js"></script>
<script type="module" src="/scripts/scroll-img-fadein-animation.js"></script>
<script type="module" src="/scripts/button_heartbeat_animation.js"></script>
<script type="css" src="/styles/styles.css"></script>
<script type="module" src="/scripts/adjust_api_dynamically.js"></script>
